fixes footer overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 body {
   background-image: url("grey-background.jpg");
+  margin-bottom: 10vh;
 }
 
 h1,
